--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <meta property="og:title" content="КОР / CORE">
     <meta property="og:description" content="Мы — КОЛЛЕКТИВ творческих ребят, которые занимаются созданием видеороликов и стримингом.">
-    <meta property="og:image" content="https://core-squad.ru/logo.png">
+    <meta property="og:image" content="https://core-squad.ru/logo_m.png">
     <meta property="og:url" content="https://core-squad.ru/">
     <meta property="og:type" content="website">
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="КОР / CORE">
     <meta name="twitter:description" content="Мы — КОЛЛЕКТИВ творческих ребят, которые занимаются созданием видеороликов и стримингом.">
-    <meta name="twitter:image" content="https://core-squad.ru/logo.png">
+    <meta name="twitter:image" content="https://core-squad.ru/logo_m.png">
     
     <style>
         .header {
